objects/PC_OcrTemplateType__c.object
<CustomObject>
    <description>It holds different types of Templates of a document supported for OCR</description>
    <fields>
        <fullName>PC_APIName__c</fullName>
        <description>API Name of the OCR template type</description>
        <externalId>true</externalId>
        <inlineHelpText>The API Name must be unique. The name must begin with a letter, and use only alphanumeric characters and underscores. The name cannot end with an underscore or have two consecutive underscores.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>Specifies the Category of the Template.</description>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consent</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CreateResultsAfterOCRCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to create resultant record post OCR completion or not.</description>
        <inlineHelpText>Specifies whether to create resultant record post OCR completion or not.</inlineHelpText>
        <label>Create results post OCR completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Description of the OCR template type</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Label__c</fullName>
        <description>Label of the template</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OCR Template Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OCR Template Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Template Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PC_AvoidSpecialCharacters</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(  PC_APIName__c ,&quot;^[A-Za-z](?:_?[A-Za-z0-9]+)*$&quot;))</errorConditionFormula>
        <errorDisplayField>PC_APIName__c</errorDisplayField>
        <errorMessage>The OCR Template Type name can only contain alphanumeric characters, must begin with a letter, cannot end with an underscore or contain two consecutive underscore characters, and must be unique across all Template Type names.</errorMessage>
    </validationRules>
</CustomObject>